--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,13 @@
-FROM node
-COPY . /.
-WORKDIR /.
-RUN yarn
+FROM node:16-alpine as build
+WORKDIR /app
+COPY package.json yarn.lock ./
+RUN yarn install
+COPY . .
+RUN yarn build
+
+FROM node:16-alpine as deploy
+WORKDIR /app
+COPY --from=build /app/dist ./dist
+COPY --from=build /app/node_modules ./node_modules
 EXPOSE 3000
-CMD ["yarn", "start:prod"]
+CMD ["node", "dist/main"]
